; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-x264/extr_obs-x264.c_override_base_params.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-x264/extr_obs-x264.c_override_base_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_x264 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_x264*, i8**, i8**, i8**, i8**)* @override_base_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @override_base_params(%struct.obs_x264* %0, i8** %1, i8** %2, i8** %3, i8** %4) #0 {
  %6 = alloca %struct.obs_x264*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8**, align 8
  store %struct.obs_x264* %0, %struct.obs_x264** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i8** %3, i8*** %9, align 8
  store i8** %4, i8*** %10, align 8
  br label %11

11:                                               ; preds = %15, %5
  %12 = load i8**, i8*** %7, align 8
  %13 = load i8*, i8** %12, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %25

15:                                               ; preds = %11
  %16 = load %struct.obs_x264*, %struct.obs_x264** %6, align 8
  %17 = load i8**, i8*** %7, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i32 1
  store i8** %18, i8*** %7, align 8
  %19 = load i8*, i8** %17, align 8
  %20 = ptrtoint i8* %19 to i32
  %21 = load i8**, i8*** %8, align 8
  %22 = load i8**, i8*** %9, align 8
  %23 = load i8**, i8*** %10, align 8
  %24 = call i32 @override_base_param(%struct.obs_x264* %16, i32 %20, i8** %21, i8** %22, i8** %23)
  br label %11

25:                                               ; preds = %11
  ret void
}

declare dso_local i32 @override_base_param(%struct.obs_x264*, i32, i8**, i8**, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
